<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.saxion.groep2.speelveld.kamertjeverhuren.ManualActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!-- Bla Bla Bla i.e. Your Textviews/Buttons etc. -->

            <TextView
                android:id="@+id/tvManualTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scrollbars="vertical"
                android:text="Manual"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvManualText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/tvManualTitle"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvManualTitle"
                android:layout_marginTop="40dp"
                android:text="@string/txt_manual"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvManualText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/tvManualTitle"
                android:layout_alignStart="@+id/tvManualText"
                android:layout_below="@+id/tvManualText"
                android:layout_marginTop="20dp"
                android:text="@string/txt_manual2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvManualText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/tvManualTitle"
                android:layout_alignStart="@+id/tvManualText2"
                android:layout_below="@+id/tvManualText2"
                android:layout_marginTop="20dp"
                android:text="@string/txt_manual3"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvManualText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/tvManualTitle"
                android:layout_alignStart="@+id/tvManualText3"
                android:layout_below="@+id/tvManualText3"
                android:layout_marginTop="20dp"
                android:text="@string/txt_manual4"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvManualText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/tvManualTitle"
                android:layout_alignStart="@+id/tvManualText2"
                android:layout_below="@+id/tvManualText4"
                android:layout_marginTop="20dp"
                android:text="@string/txt_manual5"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivManual1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/tvManualText"
                android:background="@drawable/manual_place_lines" />

            <ImageView
                android:id="@+id/ivManual2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignBottom="@+id/tvManualText2"
                android:layout_alignParentEnd="true"
                android:background="@drawable/manual_box_done" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/tvManualText4"
                android:background="@drawable/takeoverbutton" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/tvManualText5"
                android:background="@drawable/bombbutton" />
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>

